# ros2_fishros

./: .gitignore  README.md
charpt1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp  learn_cake
charpt2/: CMakeLists.txt_bak  ros2_python_node.py
charpt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
charpt2/chapt2_ws/src/ros_python_pkg/: package.xml  setup.cfg  setup.py
charpt2/ros_python_pkg/: package.xml  setup.py
charpt3/: novel1.txt  novel2.txt  novel3.txt
charpt3/src/demo_cpp_topic/: CMakeLists.txt  package.xml
charpt3/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
charpt3/src/demo_python_topic/: package.xml  setup.py
charpt3/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
charpt4/src/charpt4_interfaces/: CMakeLists.txt  package.xml
charpt5/src/demo_python_tf/: package.xml  setup.py
charpt5/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
charpt6/src/fishbot_description/: CMakeLists.txt  package.xml
charpt6/src/fishbot_description/config/: first_config.rviz  fishbot_ros2_controller.yaml
charpt8/charpt8_ws/src/patrol_voice/: setup.cfg  (+1 more)
charpt8/learn_pluginlib/src/motion_control_system/: CMakeLists.txt  README.md  motion_plugins.xml  package.xml
charpt8/learn_pluginlib/src/motion_control_system/config/: motion_controller.yaml
charpt8/learn_pluginlib/src/motion_control_system/include/motion_control_system/: motion_control_interface.hpp  motion_controller.hpp
charpt8/learn_pluginlib/src/motion_control_system/launch/: motion_control_demo.launch.py
charpt8/learn_pluginlib/src/motion_control_system/src/: motion_controller.cpp
charpt8/learn_pluginlib/src/motion_control_system/src/plugins/: circle_motion.cpp  spin_motion.cpp  straight_motion.cpp
(+53 files in other folders)
